--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-
-
+/* estilo general*/
 :root{
     --white: #FFFFFF;
     --black: #000000;
@@ -18,6 +17,8 @@
     .inactive { 
         display: none;
     }
+
+    /* Nav-bar*/
     nav{
         display: flex;
         justify-content: space-between;
@@ -81,6 +82,8 @@
         justify-content: center;
         align-items: center;
     }
+
+    /*Desktop del Menu*/
     .desktop-menu{
         width: 100px;
         height: 150px;
@@ -118,14 +121,60 @@
         margin-bottom: 20px;
         display: inline-block;
     }
+
+    /* Mobile-Menu*/
+    .mobile-menu{
+        padding: 24px;
+        position: absolute;
+        top: 60px;
+        left: 0;
+    }
+    .mobile-menu a{
+        text-decoration: none;
+        color: var(--black);
+        font-weight: bold;
+    }
+    .mobile-menu ul{
+        padding: 0;
+        margin: 24px 0 0 0 ;
+        list-style: none;
+    }
+    .mobile-menu ul:nth-child(1){
+        border-bottom: 1px solid var(--very-light-pink);
+    }
+    .mobile-menu ul:nth-child(2){
+        margin-top: 50px;
+    }
+    .mobile-menu ul:nth-child(3){
+        position: absolute;
+        bottom: 0;
+    }
+    .mobile-menu ul li{
+        margin-bottom: 24px;
+    }
+    .email{
+        font-size: var(--sm);
+        font-weight: 300 !important;
+    }
+    .sing-out{
+        font-size: var(--sm);
+        color: var(--hospital-green) !important;
+    }
+
     @media (max-width: 640px) {
         .menu{
             display: block;
         }
-        .navbar-left ul{
+        
+        .navbar-left ul,
+        .navbar-email,
+        .desktop-menu{
             display: none;
         }
-        .navbar-email{
+    }
+
+    @media (min-width: 641px) {
+        .mobile-menu{
             display: none;
         }
     }
